k8s/arr-stack/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: rinzler
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: tv
          mountPath: /tv
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: config
        hostPath:
          path: /storage/docker_volumes/bazarr_config
          type: Directory
      - name: movies
        hostPath:
          path: /storage/media/movies
          type: Directory
      - name: tv
        hostPath:
          path: /storage/media/tv
          type: Directory
